@@ -1,5 +1,4 @@
 #include <stdio.h>
-#include <string.h>
 #include <unistd.h>
 
 // set the UID this script will run as (root user)
@@ -15,27 +14,10 @@
 
 main(int argc, char *argv[])
 {
-  int cnt,rc,cc;
-  char cmnd[1024];
-
-  strcpy(cmnd, CMD);
-
-  if (argc > 1)
-  {
-    for (cnt = 1; cnt < argc; cnt++)
-    {
-      strcat(cmnd, " ");
-      strcat(cmnd, argv[cnt]);
-    }
-  }
-  else
-  {
-    fprintf(stderr, "__ %s:  failed %d  %d\n", argv[0], rc, cc);
-    return 255;
-  }
+  int rc, cc;
 
   cc = setuid(UID);
-  rc = system(cmnd);
+  rc = execvp(CMD, argv);
 
   if ((rc != 0) || (cc != 0))
   {
